--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -6,9 +6,38 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1><a href="../index.html">Odin Recipes</a></h1>
+        <p>___________________________________________________________________________</p>
+        <h2>Boozy Banana Bread</h2>
 
-        <img src="../images/bread.jpeg" alt="Boozy Banana Bread">
+        <img src="../images/bread.jpeg" alt="Boozy Banana Bread" width="600" height="800">
+
+        <h3>Ingredients</h3>
+
+        <ul>
+            <li>cooking spray</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon baking soda</li>
+            <li>2 cups all-purpose flour, sifted</li>
+            <li>5 very ripe bananas, mashed</li>
+            <li>3/4 cup brown sugar</li>
+            <li>1/2 cup butter, softened</li>
+            <li>2 eggs</li>
+            <li>3 drops almond extract</li>
+            <li>3 drops amaretto</li>
+        </ul>
+
+        <h3>Steps</h3>
+
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C). Spray a loaf pan with cooking spray.</li>
+            <li>Whisk flour, salt, and baking soda together in a bowl.</li>
+            <li>Mix bananas, brown sugar, butter, eggs, almond extract, and amaretto together in a separate bowl. 
+                Add flour mixture; mix just until flour is incorporated, about 1 minute. 
+                Transfer mixture to the prepared loaf pan.</li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, 
+                about 1 hour. Let cool before serving, about 30 minutes.</li>
+        </ol>
 
         
     </body>
