--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/bananabread.html">Banana Bread</a>
+        <ul>
+            <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+            <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
+        </ul>
+
+
     </body>
 
 </html>
