Added basic styling Added styles.css to project Added div tags and converted our header into a simple nav bar Began to add class attributes to elements in html files

--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes Project</title>
+
+        <link rel="stylesheet" href="../styles.css">
+
     </head>
 
     <body>
         <!--  Recipe Reference used: https://www.allrecipes.com/recipe/268249/italian-baked-meatballs/  -->
-        <h1><a href="../index.html">Odin Recipes</a></h1>
+
+        <div class="maintitle">
+            <h1>
+                <a href="../index.html">Odin Recipes</a>
+            </h1>
+        </div>
+
         <p>___________________________________________________________________________</p>
         <h2>Italian Baked Meatballs</h2>
 
