--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes Project</title>
+
+        <link rel="stylesheet" href="styles.css">
+
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="maintitle">Odin Recipes</h1>
 
         <ul>
             <li><a href="recipes/bananabread.html">Banana Bread</a></li>
