--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -3,12 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes Project</title>
+
+        <link rel="stylesheet" href="../styles.css">
+
     </head>
 
     <body>
         <!--  Recipe Reference used: https://www.allrecipes.com/recipe/257264/boozy-banana-bread/  -->
-        <h1><a href="../index.html">Odin Recipes</a></h1>
+
+        <div class="navbar">
+            <ul>
+                <li><a href="index.html">Odin Recipes</a></li>
+                <li><a href="meatballs.html">meatballs</a></li>
+            </ul>
+        </div>
+
+        <div class="maintitle">
+            <h1>
+                <a href="../index.html">Odin Recipes</a>
+            </h1>
+        </div>
+
         <p>___________________________________________________________________________</p>
+
         <h2>Boozy Banana Bread</h2>
 
         <img src="../images/bread.jpeg" alt="Boozy Banana Bread" width="600" height="800">
