Fixed Navbar issues Solved path errors on index.html's Navbar Fixed Capitalization for words on Navbar

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -13,8 +13,9 @@
 
         <div class="navbar">
             <ul>
-                <li><a href="index.html">Odin Recipes</a></li>
-                <li><a href="meatballs.html">meatballs</a></li>
+                <li><a href="../index.html">Odin Recipes</a></li>
+                <li><a href="meatballs.html">Meatballs</a></li>
+                <li><a href="bananabread.html">Banana Bread</a></li>
             </ul>
         </div>
 
