--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     </head>
 
     <body>
-        <h1 class="maintitle">Odin Recipes</h1>
+        <div class="navbar">
+            <ul>
+                <li><a href="index.html">Odin Recipes</a></li>
+                <li><a href="recipes/meatballs.html">Meatballs</a></li>
+                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+            </ul>
+        </div>
 
         <ul>
             <li><a href="recipes/bananabread.html">Banana Bread</a></li>
