--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -11,10 +11,12 @@
     <body>
         <!--  Recipe Reference used: https://www.allrecipes.com/recipe/268249/italian-baked-meatballs/  -->
 
-        <div class="maintitle">
-            <h1>
-                <a href="../index.html">Odin Recipes</a>
-            </h1>
+        <div class="navbar">
+            <ul>
+                <li><a href="../index.html">Odin Recipes</a></li>
+                <li><a href="meatballs.html">Meatballs</a></li>
+                <li><a href="bananabread.html">Banana Bread</a></li>
+            </ul>
         </div>
 
         <p>___________________________________________________________________________</p>
