--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             </ul>
         </div>
 
-        <ul>
-            <li><a href="recipes/bananabread.html">Banana Bread</a></li>
-            <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
-        </ul>
+        <div class="recipelist">
+            <ul>
+                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+                <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
+            </ul>
+        </div>
+        
 
 
     </body>
