Added New otherpages directory otherpages now holds my about.html page Added the about page to the navbar Linked about.html to the stylesheet and added its navbar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Odin Recipes</a></li>
                 <li><a href="recipes/meatballs.html">Meatballs</a></li>
                 <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+                <li><a class="rightalign" href="otherpages/about.html">About</a></li>
             </ul>
         </div>
 
