--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -16,6 +16,7 @@
                 <li><a href="../index.html">Odin Recipes</a></li>
                 <li><a href="meatballs.html">Meatballs</a></li>
                 <li><a href="bananabread.html">Banana Bread</a></li>
+                <li><a class="rightalign" href="../otherpages/about.html">About</a></li>
             </ul>
         </div>
 
