Design Decisions Began to make the entire website mobile responsive Changed font size to be responsive instead of a set 28px Changed the navbar to only have two options Added basic information to the about page Added github link to about page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipes Project</title>
 
         <link rel="stylesheet" href="styles.css">
@@ -12,8 +13,6 @@
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Odin Recipes</a></li>
-                <li><a href="recipes/meatballs.html">Meatballs</a></li>
-                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
                 <li><a class="rightalign" href="otherpages/about.html">About</a></li>
             </ul>
         </div>
