--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipes Project</title>
 
         <link rel="stylesheet" href="../styles.css">
@@ -14,8 +15,6 @@
         <div class="navbar">
             <ul>
                 <li><a href="../index.html">Odin Recipes</a></li>
-                <li><a href="meatballs.html">Meatballs</a></li>
-                <li><a href="bananabread.html">Banana Bread</a></li>
                 <li><a class="rightalign" href="../otherpages/about.html">About</a></li>
             </ul>
         </div>
