Changes to page layout Added a container to recipe pages Container now has the recipe image and ingredients list within it Added margins and float to bot the ingredients list and image Added margin and border to the new container

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -15,28 +15,38 @@
         <div class="navbar">
             <ul>
                 <li><a href="../index.html">Odin Recipes</a></li>
-                <li><a class="rightalign" href="../otherpages/about.html">About</a></li>
+                <li><a class="navabout" href="../otherpages/about.html">About</a></li>
             </ul>
         </div>
 
-        <h2>Boozy Banana Bread</h2>
+        <div class="recipename">
+            <h2>Boozy Banana Bread</h2>
+        </div>
 
-        <img src="../images/bread.jpeg" alt="Boozy Banana Bread" width="600" height="800">
+        <div class="container">
+            <div class="recipeimage">
+                <img src="../images/bread.jpeg" alt="Boozy Banana Bread">
+            </div>
+    
+            <div class="ingredientslist">
+                <h3>Ingredients</h3>
 
-        <h3>Ingredients</h3>
+                <ul>
+                    <li>cooking spray</li>
+                    <li>1 teaspoon salt</li>
+                    <li>1 teaspoon baking soda</li>
+                    <li>2 cups all-purpose flour, sifted</li>
+                    <li>5 very ripe bananas, mashed</li>
+                    <li>3/4 cup brown sugar</li>
+                    <li>1/2 cup butter, softened</li>
+                    <li>2 eggs</li>
+                    <li>3 drops almond extract</li>
+                    <li>3 drops amaretto</li>
+                </ul>
 
-        <ul>
-            <li>cooking spray</li>
-            <li>1 teaspoon salt</li>
-            <li>1 teaspoon baking soda</li>
-            <li>2 cups all-purpose flour, sifted</li>
-            <li>5 very ripe bananas, mashed</li>
-            <li>3/4 cup brown sugar</li>
-            <li>1/2 cup butter, softened</li>
-            <li>2 eggs</li>
-            <li>3 drops almond extract</li>
-            <li>3 drops amaretto</li>
-        </ul>
+            </div>
+        </div>
+
 
         <h3>Steps</h3>
 
