Unified Recipe Pages Container added to other recipe page as well as formatting Site preview link added to README

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -12,6 +12,8 @@
     <body>
         <!--  Recipe Reference used: https://www.allrecipes.com/recipe/257264/boozy-banana-bread/  -->
 
+        <!-- Navbar Elements -->
+
         <div class="navbar">
             <ul>
                 <li><a href="../index.html">Odin Recipes</a></li>
@@ -19,9 +21,13 @@
             </ul>
         </div>
 
+        <!-- Recipe Name-->
+
         <div class="recipename">
             <h2>Boozy Banana Bread</h2>
         </div>
+
+        <!-- Container with image and ingredients list -->
 
         <div class="container">
             <div class="recipeimage">
@@ -46,6 +52,8 @@
 
             </div>
         </div>
+
+        <!-- Steps for recipe -->
 
 
         <h3>Steps</h3>
