--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -12,6 +12,8 @@
     <body>
         <!--  Recipe Reference used: https://www.allrecipes.com/recipe/268249/italian-baked-meatballs/  -->
 
+        <!-- Navbar Elements -->
+
         <div class="navbar">
             <ul>
                 <li><a href="../index.html">Odin Recipes</a></li>
@@ -19,24 +21,35 @@
             </ul>
         </div>
 
+        <!-- Recipe Name-->
+
         <h2>Italian Baked Meatballs</h2>
 
-        <img src="../images/meatballs.jpeg" alt="Italian Baked Meatballs" width="700" height="800">
+        <!-- Container with image and ingredients list -->
 
-        <h3>Ingredients</h3>
+        <div class="container">
+            <div class="recipeimage">
+                <img src="../images/meatballs.jpeg" alt="Italian Baked Meatballs">
+            </div>
+    
+            <div class="ingredientslist">
+                <h3>Ingredients</h3>
 
-        <ul>
-            <li>1 cup italian-seasoned bread crumbs</li>
-            <li>1/4 cup grated Romano cheese</li>
-            <li>2 tablespoons fresh chopped parsley</li>
-            <li>1/2 teaspoon salt</li>
-            <li>1/2 teaspon ground black pepper</li>
-            <li>1/2 teaspoon garlic powder</li>
-            <li>1/2 teaspoon onion powder</li>
-            <li>1/2 cup water</li>
-            <li>2 eggs</li>
-            <li>1 1/2 pounds ground beef</li>
-        </ul>
+                <ul>
+                    <li>1 cup italian-seasoned bread crumbs</li>
+                    <li>1/4 cup grated Romano cheese</li>
+                    <li>2 tablespoons fresh chopped parsley</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>1/2 teaspon ground black pepper</li>
+                    <li>1/2 teaspoon garlic powder</li>
+                    <li>1/2 teaspoon onion powder</li>
+                    <li>1/2 cup water</li>
+                    <li>2 eggs</li>
+                    <li>1 1/2 pounds ground beef</li>
+                </ul>
+
+            </div>
+        </div>
 
         <h3>Steps</h3>
 
