--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Odin Recipes</a></li>
-                <li><a class="rightalign" href="otherpages/about.html">About</a></li>
+                <li><a class="navabout" href="otherpages/about.html">About</a></li>
             </ul>
         </div>
 
