Restyled landing page Added a container to hold recipes Went with a two list structure for displaying recipes Added new classes "leftlist" and "rightlist"

--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -23,7 +23,9 @@
 
         <!-- Recipe Name-->
 
-        <h2>Italian Baked Meatballs</h2>
+        <div class="recipename">
+            <h2>Italian Baked Meatballs</h2>
+        </div>
 
         <!-- Container with image and ingredients list -->
 
