--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
             </ul>
         </div>
 
-        <div class="recipelist">
-            <ul>
+        <div class="landingcontainer">
+            <ul class="leftlist">
+                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
+                <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
+            </ul>
+
+            <ul class="rightlist">
                 <li><a href="recipes/bananabread.html">Banana Bread</a></li>
                 <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
             </ul>
         </div>
         
-
 
     </body>
 
