Converted navbar into flexbox Removed original navbar and related CSS from all files Navbar is now a flexbox with two children Added CSS to new navbar elements

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     </head>
 
     <body>
-        <div class="navbar">
-            <ul>
-                <li><a href="index.html">Odin Recipes</a></li>
-                <li><a class="navabout" href="otherpages/about.html">ABOUT</a></li>
-            </ul>
+        <div class="flexbar">
+            <div class="flexleft">
+                <a href="index.html">Odin Recipes</a>
+            </div>
+            <div class="flexright">
+                <a class="navabout" href="otherpages/about.html">ABOUT</a>
+                <img class="image" src="images/profilecrop.jpg">
+                
+            </div>
         </div>
 
         <div class="landingcontainer">
