Restyling and adding new navbar to other pages Navbar from index.html added to all other pages File paths fixed for navbar links Converted text size for nav elements from 100px to 4vw

--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -11,11 +11,15 @@
 
     <body>
 
-        <div class="navbar">
-            <ul>
-                <li><a href="../index.html">Odin Recipes</a></li>
-                <li><a class="navabout" href="../otherpages/about.html">About</a></li>
-            </ul>
+        <div class="flexbar">
+            <div class="flexleft">
+                <a href="../index.html">Odin Recipes</a>
+            </div>
+            <div class="flexright">
+                <a class="navabout" href="about.html">ABOUT</a>
+                <img class="image" src="../images/profilecrop.jpg">
+                
+            </div>
         </div>
 
         <h1>Site Author: Enzo Romano</h1>
