--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -14,11 +14,15 @@
 
         <!-- Navbar Elements -->
 
-        <div class="navbar">
-            <ul>
-                <li><a href="../index.html">Odin Recipes</a></li>
-                <li><a class="navabout" href="../otherpages/about.html">About</a></li>
-            </ul>
+        <div class="flexbar">
+            <div class="flexleft">
+                <a href="../index.html">Odin Recipes</a>
+            </div>
+            <div class="flexright">
+                <a class="navabout" href="../otherpages/about.html">ABOUT</a>
+                <img class="image" src="../images/profilecrop.jpg">
+                
+            </div>
         </div>
 
         <!-- Recipe Name-->
