--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
 
         <div class="landingcontainer">
             <ul class="leftlist">
-                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
-                <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
+                <li>
+                    <a href="recipes/bananabread.html">Banana Bread</a>
+                    <p>Prep: 15m | Cook Time: 1hr</p>
+                </li>
+                <li>
+                    <a href="recipes/meatballs.html">Italian Baked Meatballs</a>
+                    <p>Prep: 10m | Cook Time: 30m</p>
+                </li>
             </ul>
 
             <ul class="rightlist">
-                <li><a href="recipes/bananabread.html">Banana Bread</a></li>
-                <li><a href="recipes/meatballs.html">Italian Baked Meatballs</a></li>
+                <li>
+                    <a href="recipes/bananabread.html">Banana Bread</a>
+                    <p>Prep: 15m | Cook Time: 1hr</p>
+                </li>
+                <li>
+                    <a href="recipes/meatballs.html">Italian Baked Meatballs</a>
+                    <p>Prep: 10m | Cook Time: 30m</p>
+                </li>
             </ul>
         </div>
         
